# serverify

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md  codecov.yml
.github/workflows/: close-release-pr.yml  main.yml  release-pr.yml  test.yml
e2e/: run.sh
e2e/cases/: invalid_input.yaml  mock.yaml  paging.yaml  port.yaml  smoke.yaml
src/: config.rs  endpoint.rs  history.rs  json_template.rs  lib.rs  main.rs  method.rs  mock_endpoint.rs  request_logger.rs  response.rs  serve.rs  session_endpoint.rs  state.rs
