[package]
name = "serverify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
indexmap = { version = "2.2.1", features = ["serde"] }
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.31"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.10", features = ["io"] }

[dev-dependencies]
axum-test = "14.8.0"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
